--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,1 +1,16 @@
-<ion-nav [root]="rootPage"></ion-nav>
+<ion-menu [content]="content">
+  <ion-header>
+    <ion-toolbar>
+      <ion-title>Menu</ion-title>
+    </ion-toolbar>
+  </ion-header>
+  <ion-content>
+    <ion-list>
+      <button ion-button block (click)="addTempItems()">Get Items</button>
+      <button ion-button block (click)="OnProfile()">Profile</button>
+      <button ion-button block (click)="OnLogout()">logout</button>
+    </ion-list>
+  </ion-content>
+</ion-menu>
+
+<ion-nav id="nav" #content [root]="rootPage"></ion-nav>
