--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,19 @@
 page-home {
 
+
+  .ion-card {
+  }
+
+  .card-title {
+    text-align: center;
+    top: 36%;
+    font-size: 2.0em;
+    width: 100%;
+    font-weight: bold;
+    color: #000000;
+  }
+
+
+
+
 }
